--- a/src/Home/News/News.css
+++ b/src/Home/News/News.css
@@ -80,7 +80,15 @@
   justify-content: center;
 }
 
-.news .bottom-content a {
+.news .bottom-content button {
+  background-color: #FFFFFF;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  padding: 8px 20px;
+  margin: 10px 0px;
+}
+
+.news .bottom-content button a {
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
   font-weight: 700;
@@ -88,9 +96,4 @@
   text-transform: uppercase;
   text-align: center;
   color: #333333;
-  background-color: #FFFFFF;
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
-  border-radius: 3px;
-  padding: 8px 20px;
-  margin: 10px 0px;
 }
